--- a/src/Microsoft.Xna.Framework/Microsoft.Xna.Framework.csproj
+++ b/src/Microsoft.Xna.Framework/Microsoft.Xna.Framework.csproj
@@ -369,6 +369,7 @@
     <Compile Include="Content\Readers\RectangleReader.cs" />
     <Compile Include="Content\Readers\SpriteFontReader.cs" />
     <Compile Include="Content\Readers\Vector3Reader.cs" />
+    <Compile Include="HelperCode\LzxDecoder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -377,16 +378,12 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Tao.Sdl, Version=1.2.13.0, Culture=neutral, PublicKeyToken=9c7a200e36c0094e">
-      <Package>tao-sdl</Package>
     </Reference>
     <Reference Include="Tao.OpenGl, Version=3.0.0.0, Culture=neutral, PublicKeyToken=1ca010269a4501ef">
-      <Package>tao-opengl</Package>
     </Reference>
     <Reference Include="Tao.OpenAl, Version=1.1.0.1, Culture=neutral, PublicKeyToken=a7579dda88828311">
-      <Package>tao-openal</Package>
     </Reference>
     <Reference Include="Tao.DevIl, Version=1.6.8.3, Culture=neutral, PublicKeyToken=7ec4053013524957">
-      <Package>tao-devil</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
